--- a/task4.html
+++ b/task4.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
  <meta charset="utf-8">
- <title> Simple Calculator using HTML, CSS and JavaScript </title>
+ <title> Task 4 </title>
  <link rel="stylesheet" href="task4.css">
 </head>
 <body>
